# PIGNN-Attn-LS

./: .gitignore  Dataset_optimized_complex_columns.py  EquationsGuide.ipynb  GNSMsg_SelfAttention_armijo.py  GNSMsg_SelfAttention_armijo_5think.py  GNSMsg_armijo.py  README.md  bench_inference_batched.py  bench_inference_fair.py  collate_blockdiag_optimized_complex_columns.py  convert_bib.ipynb  helper.py  read_npy_columns_optimized.py  ref.bib  test.py  train_valid_test.py
PIGNN-Attn-LS-PPC/: Dataset_optimized_complex_columns.py  GNSMsg_SelfAttention_armijo.py  helper.py  (+11 more)
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/: README.md  pyproject.toml  requirements.txt
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/configs/: lvn_pignn_attn_ls.yaml
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/data_loading/: __init__.py  collate.py  dataset.py  npy_decode.py  samplers.py
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/datasets/: README.md
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/models/: __init__.py  registry.py
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/models/edge_selfattn/: __init__.py  admittance.py  attention.py  builder.py  mismatch.py  model.py
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/scripts/: convert_lvn_to_hvn_schema.py  eval_lvn_test.py  train_lvn_pignn_attn_ls.sh
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/train/: __init__.py  __main__.py  config_loader.py  data.py  entrypoint.py  logger.py  loop.py  metrics.py  mlflow_utils.py  modeling.py  optim_utils.py  peft_utils.py  plotting.py  run_naming.py  run_paths.py
PIGNN-Attn-LS-PPC/PIGNN-Attn-LS-LVN/train/cli/: __init__.py  defaults.py  loader.py  parser.py  schema.py
(+69 files in other folders)
