[project]
name = "pignn-attn-ls-lvn"
version = "0.1.0"
description = "Standalone bundle for training PIGNN-Attn-LS on the LVN dataset"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow>=12,<23",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "mlflow>=2.12.0",
    # torch + torch_scatter must be installed manually with wheels matched
    # to your CUDA/Python combo — see requirements.txt for the install hints.
]

[project.scripts]
pignn-attn-ls-train = "train.entrypoint:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["train*", "models*", "data_loading*"]
